# hidrd

./: .gitignore  CMakeLists.txt  Makefile.am  android64_configure.sh  android_configure.sh  com_claydonkey_hidrd_FilePicker.h  com_claydonkey_hidrd_FilePicker_ExtensionFilenameFilter.h  com_claydonkey_hidrd_FilePicker_FileComparator.h  com_claydonkey_hidrd_FilePicker_FilePickerListAdapter.h  config.h.in~  configure.ac  distcheck-all
android/: AndroidManifest.xml  build.xml
android/src/assets/: mouse_descriptor.xml
android/src/com/claydonkey/hidrd/: FilePicker.java  MainActivity.java
android/src/com/claydonkey/hidrp/: FilePicker.java  MainActivity.java
hidrd-android/: build.gradle  com_claydonkey_hidrd_FilePicker.h  com_claydonkey_hidrd_FilePicker_FilePickerListAdapter.h  import-summary.txt  local.properties
hidrd-android/app/: CMakeLists.txt  build.gradle
hidrd-android/app/release/: app-release.apk  output.json
hidrd-android/app/src/main/: AndroidManifest.xml
hidrd-android/app/src/main/cpp/: hidrd_jni.c  hidrd_jni.h
hidrd-android/app/src/main/java/com/claydonkey/hidrd/: FilePicker.java  MainActivity.java
hidrd-android/app/src/main/res/layout/: empty_view.xml
hidrd-android/app/src/main/resources/assets/: mouse_descriptor.xml
hidrd-android/distribution/include/hidrd/fmt/: cfg.h
hidrd-android/distribution/include/hidrd/fmt/xml/: cfg.h
hidrd-android/distribution/include/hidrd/usage/: all.h  id_desc_list.h
hidrd-android/distribution/include/libxml/: xmlversion.h
hidrd-android/gradle/wrapper/: gradle-wrapper.properties
include/hidrd/adr/: Makefile.am  adr.h
include/hidrd/fmt/xml/: Makefile.am
lib/: NBMinGW.gdbinit
lib/adr/: Makefile.am  adr.c
lib/fmt/: read.c
lib/fmt/hex/: src.c
lib/fmt/xml/snk/: element.c
lib/opt/: list.c
lib/util/: fd.c  ttbl.c
nbproject/: configurations.xml  project.properties  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  configurations.xml  private.xml  x86_64-w64-mingw32.properties
src/: hidrd-convert.c  mouse_descriptor.hex
tools/: JNI_HEADER.txt  Zaarch64-linux-android-clang_configure.sh  Zaarch64-linux-android-configure.sh  Zx86_64-pc-mingw32.sh  aarch64-linux-android-clang_configure.sh  aarch64-linux-android_configure.sh  android_buildinstall.sh  arm-linux-androideabi_configure.sh  com_claydonkey_hidrd_FilePicker.h  com_claydonkey_hidrd_FilePicker_ExtensionFilenameFilter.h  com_claydonkey_hidrd_FilePicker_FileComparator.h  configure_android64.sh  copyToJNI.sh  i686-pc-mingw32.sh  prep_autotools.sh  start_gdb.sh  start_gdbd.sh  x86_64-pc-mingw32.sh
tools/System/: linker64
